# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

group("samgr_etc") {
  deps = [
    ":samgr.para",
    ":samgr.para.dac",
    ":samgr_init",
  ]
}

ohos_prebuilt_etc("samgr.para.dac") {
  source = "samgr.para.dac"
  relative_install_dir = "param"
  part_name = "samgr"
  subsystem_name = "systemabilitymgr"
}

ohos_prebuilt_etc("samgr.para") {
  source = "samgr.para"
  relative_install_dir = "param"
  part_name = "samgr"
  subsystem_name = "systemabilitymgr"
}

group("etc") {
  deps = [ ":samgr_init" ]
}

ohos_prebuilt_etc("samgr_init") {
  source = "samgr_standard.cfg"
  relative_install_dir = "init"
  part_name = "samgr"
  subsystem_name = "systemabilitymgr"
}
