# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

if (defined(ohos_lite)) {
  import("//build/lite/config/component/lite_component.gni")
  import("//build/lite/config/test.gni")
} else {
  import("//build/test.gni")
}

config_policy_sources = [ "config_policy_utils_test.cpp" ]
config_policy_include_dirs =
    [ "//base/customization/config_policy/interfaces/inner_api/include" ]
config_policy_deps = [ "//base/customization/config_policy/frameworks/config_policy:configpolicy_util" ]

if (defined(ohos_lite)) {
  unittest("ConfigPolicyUtilsTest") {
    output_extension = "bin"
    sources = config_policy_sources
    include_dirs = config_policy_include_dirs
    deps = config_policy_deps
  }
  group("unittest") {
    deps = [ ":ConfigPolicyUtilsTest" ]
  }
} else {
  ohos_unittest("ConfigPolicyUtilsTest") {
    module_out_path = "config_policy/ConfigPolicyUtilsTest"
    sources = config_policy_sources
    include_dirs = config_policy_include_dirs
    deps = config_policy_deps
    resource_config_file =
        "//base/customization/config_policy/test/resource/ohos_test.xml"
  }
}
