# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")
import("//build/lite/config/test.gni")

hitrace_root_dir = "//base/hiviewdfx/hitrace"
hitrace_code_dir = "${hitrace_root_dir}/frameworks/native"
hitrace_test_dir = "${hitrace_root_dir}/test/unittest"

config("module_private_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "//base/hiviewdfx/hitrace/interfaces/native/innerkits/include",
    "//base/hiviewdfx/hilog_lite/interfaces/native/innerkits",
    "//base/hiviewdfx/hilog_lite/interfaces/native/innerkits/hilog",
    "//third_party/bounds_checking_function/include",
  ]
}

unittest("HitraceCTest") {
  sources = [
    "${hitrace_code_dir}/hitracec.c",
    "${hitrace_test_dir}/common/native/hitracec_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  public_deps = [
    "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_shared",
    "//third_party/bounds_checking_function:libsec_shared",
  ]
}

unittest("HitraceCppTest") {
  sources = [
    "${hitrace_code_dir}/hitrace.cpp",
    "${hitrace_code_dir}/hitracec.c",
    "${hitrace_code_dir}/hitraceid.cpp",
    "${hitrace_test_dir}/common/native/hitracecpp_test.cpp",
  ]

  configs = [ ":module_private_config" ]

  public_deps = [
    "//base/hiviewdfx/hilog_lite/frameworks/featured:hilog_shared",
    "//third_party/bounds_checking_function:libsec_shared",
  ]
}

group("unittest") {
  if (ohos_build_type == "debug") {
    deps = [
      ":HitraceCTest",
      ":HitraceCppTest",
    ]
  }
}
